--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
    </plugin>
    </plugins>  
   </build>
-  <profiles>
+  <!--<profiles>
   <profile>
   <id>Smoke</id>
   <build>
@@ -101,6 +101,6 @@
     </pluginManagement>
   </build>
   </profile>
-  </profiles>
+  </profiles>-->
  </properties>
 </project>
