--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,32 @@
   <url>http://maven.apache.org</url>
   
 
- <properties>
+ <!--<properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>	
+  <profiles>
+  <profile>
+  <id>Smoke</id>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M5</version>
+          <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+  </profile>
+  </profiles>
+ </properties>
   
-    <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->   
+    <!--<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->   
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
     <!-- <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
@@ -31,7 +53,6 @@
         <groupId>com.relevantcodes</groupId>
         <artifactId>extentreports</artifactId>
         <version>2.41.2</version> -->
-
 <dependencies>
   <!-- Selenium -->
   <dependency>     
@@ -81,26 +102,4 @@
    </plugin>
    </plugins>  
   </build>
-  <!--<profiles>
-  <profile>
-  <id>Smoke</id>
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M5</version>
-          <configuration>
-          <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
-          </suiteXmlFiles>
-        </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-  </profile>
-  </profiles>-->
- </properties>
 </project>
