--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
   </build>
   </profile>
   </profiles>
- </properties>
+ </properties>-->
   
     <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->   
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -52,7 +52,8 @@
     <dependency>
         <groupId>com.relevantcodes</groupId>
         <artifactId>extentreports</artifactId>
-        <version>2.41.2</version> -->
+        <version>2.41.2</version> 
+   <dependency>-->
 <dependencies>
   <!-- Selenium -->
   <dependency>     
