--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,31 @@
   <url>http://maven.apache.org</url>
   
 
- <!--<properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>	
+ <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <profiles>
+  <profile>
+  <id>Regression</id>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M5</version>
+          <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng2.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+   
+  </profile>
+  
   <profile>
   <id>Smoke</id>
   <build>
@@ -32,13 +54,25 @@
       </plugins>
     </pluginManagement>
   </build>
+   
   </profile>
-  </profiles>
- </properties>-->
   
+  </profiles>
+  
+  
+ 
+  
+
+  <dependencies>
+  
+  <dependency>      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->   
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-    <!-- <dependency>
+     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
         <version>2.53.0</version>
@@ -48,57 +82,11 @@
         <artifactId>poi</artifactId>
         <version>3.9</version>
     </dependency>
-     https://mvnrepository.com/artifact/com.relevantcodes/extentreports 
+    <!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
     <dependency>
         <groupId>com.relevantcodes</groupId>
         <artifactId>extentreports</artifactId>
-        <version>2.41.2</version> -->
-<dependencies>
-  <!-- Selenium -->
-  <dependency>     
-  <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+        <version>2.41.2</version>
     </dependency>
-  <dependency>
-     <groupId>org.seleniumhq.selenium</groupId>
-     <artifactId>selenium-java</artifactId>
-     <version>2.53.1</version>
-  </dependency>
-  <!-- TestNG -->
-  <dependency>
-     <groupId>org.testng</groupId>
-     <artifactId>testng</artifactId>
-     <version>6.8</version>
-     <scope>test</scope>
-  </dependency>
-</dependencies>
-
-
-  <build>
-   <plugins>
-   <plugin>
-   <groupId>org.apache.maven.plugins</groupId>
-           <artifactId>maven-compiler-plugin</artifactId>
-           <version>3.6.1</version>
-           <configuration>
-           <source>1.8</source>
-           <target>1.8</target>
-           </configuration>
-   </plugin>
-  
-   <plugin>
-   <groupId>org.apache.maven.plugins</groupId>
-           <artifactId>maven-surefire-plugin</artifactId>
-           <version>2.20</version>
-           <configuration>
-           <suiteXmlFiles>
-           <suiteXmlFile>testng.xml</suiteXmlFile>
-           <!-- <suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile> -->
-           </suiteXmlFiles>
-           </configuration>
-   </plugin>
-   </plugins>  
-  </build>
+  </dependencies>
 </project>
