--- a/pom.xml
+++ b/pom.xml
@@ -48,13 +48,13 @@
 			<version>1.2</version>
 	</dependency>
 	
-	<!--<dependency>
+	<dependency>
 			<groupId>SampleLoginConfig</groupId>
 			<artifactId>SampleLoginConfig</artifactId>
 			<scope>system</scope>
 			<version>1.0</version>
 			<systemPath>${project.basedir}\Config.jar</systemPath>
-	</dependency>-->
+	</dependency>
 	   
   </dependencies>
   
