--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 			<scope>system</scope>
 			<version>1.0</version>
 			<systemPath>${project.basedir}\Config.jar</systemPath>
-	</dependency>
+	<!--</dependency>
 	           <dependency>				
              <groupId>junit</groupId>								
              <artifactId>junit</artifactId>								
@@ -65,7 +65,7 @@
             <groupId>org.seleniumhq.selenium</groupId>								
             <artifactId>selenium-java</artifactId>								
             <version>2.45.0</version>								
-		</dependency>				
+		</dependency>-->				
         <dependency>				
             <groupId>org.testng</groupId>								
             <artifactId>testng</artifactId>								
